--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://react-h1u97h9so-carlostrinidad14.vercel.app/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
