--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "react-app",
+  "homepage":"https://carlostrinidad14.github.io/react-app",
+  "name": "react-app",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
